deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-keda-svc
  annotations:
    prometheus.io/path: "/q/metrics"
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-keda
