deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-keda
    app.kubernetes.io/component: quarkus-keda
    app.kubernetes.io/instance: quarkus-keda
    app.kubernetes.io/name: quarkus-keda
    app.kubernetes.io/part-of: quarkus-keda
    app.openshift.io/runtime-version: latest
  name: quarkus-keda
  namespace: project-100
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: quarkus-keda-svc
    weight: 100
  wildcardPolicy: None
